# honeycomb-cleaner

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/honeycomb_cleaner/: client.py  main.py
tests/: test_client.py
